--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="/Users/sallystahl/Downloads/provided/lib/json-20220320.jar"/>
+	<classpathentry kind="lib" path="json-20220320.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
